// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiComment testClass1 testClass2 css-mjs1z4-euiTimelineItem"
  data-test-subj="test subject string"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
        </div>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props event is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          >
            commented
          </div>
        </div>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props timelineIcon is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="Mario"
        class="euiAvatar euiAvatar--l euiAvatar--user css-17x6j1e-euiAvatar-l-user"
        role="img"
        style="background-color:#f1d86f;color:#000000"
        title="Mario"
      >
        <span
          aria-hidden="true"
        >
          M
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
        </div>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
          <div
            class="euiCommentEvent__headerTimestamp"
          >
            <time>
              21 days ago
            </time>
          </div>
        </div>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props type custom is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <div
      class="euiCommentEvent css-p2ten8-euiCommentEvent-custom"
    />
  </div>
</li>
`;

exports[`EuiComment props type regular is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
        </div>
      </figcaption>
    </figure>
  </div>
</li>
`;

exports[`EuiComment props type update is rendered 1`] = `
<li
  class="euiComment euiComment--update css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-krcl3t-euiCommentEvent-update"
    >
      <div
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-cylma9-euiCommentEvent__updatePanel"
      >
        <div
          class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
        >
          <div
            class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
          >
            <div
              class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
            >
              someuser
            </div>
            <div
              class="euiCommentEvent__headerEvent"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment renders a body 1`] = `
<li
  class="euiComment euiComment--hasBody css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentTimeline css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-1vw1i3u-euiCommentEvent-regular"
    >
      <figcaption
        class="euiCommentEvent__header css-397e40-euiCommentEvent__header"
      >
        <div
          class="euiCommentEvent__headerData css-1l51d77-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername css-10865x4-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent"
          />
        </div>
      </figcaption>
      <div
        class="euiCommentEvent__body"
      >
        <p>
          This is the body.
        </p>
      </div>
    </figure>
  </div>
</li>
`;
